# chatlie

./: .gitignore  README.md  manage.py  pyproject.toml
chat/: consumers.py  routing.py  urls.py  views.py
chat/templates/chat/: index.html  room.html
chatlie/: asgi.py  settings.py  urls.py  wsgi.py
