[project]
name = "chatlie"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gbenga Adeyi", email = "adeyigbenga005@gmail.com" }
]
dependencies = [
    "django>=5.0.7",
    "channels[daphne]>=4.1.0",
    "channels-redis>=4.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
